fixed deprecations